[gd_scene format=3 uid="uid://bckb4866dt45s"]

[ext_resource type="FontFile" uid="uid://ijumkgf31v2x" path="res://arts/m6x11plus.ttf" id="1_235xy"]
[ext_resource type="Script" uid="uid://wdap24m0shlh" path="res://scripts/pc/pc_control.gd" id="1_236bd"]
[ext_resource type="Texture2D" uid="uid://diae5xkiuusn7" path="res://arts/test/Mouse.png" id="2_2c1gn"]
[ext_resource type="Texture2D" uid="uid://d3cbr6riwy1fj" path="res://arts/test/pcwallpaper_test.webp" id="2_236bd"]
[ext_resource type="Script" uid="uid://satccet7bdls" path="res://scripts/pc/desktop_root.gd" id="3_pthp1"]
[ext_resource type="Texture2D" uid="uid://do66cd84wpaht" path="res://arts/test/taskbar_teste.png" id="4_3d4qn"]
[ext_resource type="PackedScene" uid="uid://cjicl4epna208" path="res://scenes/interactables/computer/desktop_app_icons.tscn" id="6_rrfp6"]
[ext_resource type="Texture2D" uid="uid://c1mhjj4wyahjf" path="res://arts/test/Off_test.png" id="7_hbrv6"]
[ext_resource type="Script" uid="uid://c12ysu4qxad5" path="res://scripts/pc/login_screen.gd" id="7_m7g4r"]
[ext_resource type="Texture2D" uid="uid://11wllttmf6s3" path="res://arts/test/arquivos_test.png" id="8_egac1"]
[ext_resource type="Texture2D" uid="uid://b7v06o2apcbq0" path="res://arts/test/login_bg.png" id="8_j70bi"]
[ext_resource type="Texture2D" uid="uid://b86mvvv7wltwv" path="res://arts/test/User_Test.png" id="8_qu3oj"]
[ext_resource type="PackedScene" uid="uid://cmor41gnd7hyr" path="res://scenes/interactables/computer/folder.tscn" id="9_q7ic0"]
[ext_resource type="PackedScene" uid="uid://dwj16qslll4f1" path="res://scenes/interactables/computer/audio_player.tscn" id="10_q7ic0"]
[ext_resource type="PackedScene" uid="uid://ddvoeqv37mhyk" path="res://scenes/interactables/computer/video_player.tscn" id="11_0syfu"]
[ext_resource type="Texture2D" uid="uid://c75jrp57x4wfs" path="res://icon.svg" id="11_g0i7v"]
[ext_resource type="StyleBox" uid="uid://dhoky5h165xju" path="res://scripts/pc/lineedit1classic.tres" id="15_77gr0"]
[ext_resource type="Texture2D" uid="uid://c3epuxs7y77he" path="res://arts/images/PC/Confirmar1.png" id="15_q7ic0"]
[ext_resource type="Texture2D" uid="uid://fgf5qfrj6jsb" path="res://arts/images/PC/EsqueciSenha.png" id="16_g0i7v"]
[ext_resource type="Texture2D" uid="uid://bvw4ets4cciua" path="res://arts/images/PC/Voltar1.png" id="17_g0i7v"]

[sub_resource type="Theme" id="Theme_77gr0"]
default_font = ExtResource("1_235xy")

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_vgvgk"]
load_path = "res://.godot/imported/Desliga.png-8dd33cd1ba57ca4c37b667835d7a4af0.ctex"

[node name="PCControl" type="Control" unique_id=1199994050]
custom_minimum_size = Vector2(1600, 1200)
layout_mode = 3
anchor_right = 1.389
anchor_bottom = 1.8520001
offset_right = -0.12805176
offset_bottom = -0.096069336
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme = SubResource("Theme_77gr0")
script = ExtResource("1_236bd")

[node name="Desktop_Test" type="Control" parent="." unique_id=1408403905]
visible = false
anchors_preset = 0
offset_right = 1600.0
offset_bottom = 1200.0

[node name="BG" type="TextureRect" parent="Desktop_Test" unique_id=1827769649]
modulate = Color(0.7524575, 0.75245756, 0.75245756, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_236bd")

[node name="Quit" type="Button" parent="Desktop_Test" unique_id=1809219507]
layout_mode = 0
offset_left = 15.999999
offset_top = 508.0
offset_right = 344.0
offset_bottom = 836.0
scale = Vector2(0.2, 0.2)
icon = SubResource("CompressedTexture2D_vgvgk")
icon_alignment = 1

[node name="Button" type="Button" parent="Desktop_Test" unique_id=836174516]
layout_mode = 0
offset_left = 257.0
offset_top = 281.0
offset_right = 516.0
offset_bottom = 362.0
text = "botão teste"

[node name="LineEdit" type="LineEdit" parent="Desktop_Test" unique_id=2023780787]
layout_mode = 0
offset_left = 471.0
offset_top = 113.0
offset_right = 785.0
offset_bottom = 144.0

[node name="Label" type="Label" parent="Desktop_Test" unique_id=1567936751]
layout_mode = 0
offset_left = 238.00002
offset_top = 5.9999995
offset_right = 283.0
offset_bottom = 29.0
scale = Vector2(5.8288164, 4.475181)
text = "TESTE"
horizontal_alignment = 1

[node name="Desktop_Root" type="Control" parent="." unique_id=776843089]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_pthp1")

[node name="Desktop_BG" type="TextureRect" parent="Desktop_Root" unique_id=1348087640]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("2_236bd")
expand_mode = 1

[node name="Taskbar" type="Control" parent="Desktop_Root" unique_id=1096995476]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Bar" type="TextureRect" parent="Desktop_Root/Taskbar" unique_id=1062483664]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("4_3d4qn")

[node name="OffButton" type="Button" parent="Desktop_Root/Taskbar" unique_id=760509438]
layout_mode = 0
offset_right = 80.0
offset_bottom = 80.0
icon = ExtResource("7_hbrv6")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Clock" type="Label" parent="Desktop_Root/Taskbar" unique_id=681408296]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -158.0
offset_top = -7.0
offset_right = 2.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 44
text = "21:34"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AppContainer" type="HBoxContainer" parent="Desktop_Root/Taskbar" unique_id=780172760]
z_index = 1
custom_minimum_size = Vector2(80, 80)
layout_mode = 0
offset_left = 104.0
offset_right = 184.0
offset_bottom = 80.0
theme_override_constants/separation = 8

[node name="Desktop_Icons" type="GridContainer" parent="Desktop_Root" unique_id=1810797379]
custom_minimum_size = Vector2(96, 110)
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 288.0
offset_bottom = 174.0
theme_override_constants/h_separation = 60
theme_override_constants/v_separation = 46
columns = 10

[node name="ORei" parent="Desktop_Root/Desktop_Icons" unique_id=1670998579 instance=ExtResource("6_rrfp6")]
layout_mode = 2
app_scene = ExtResource("9_q7ic0")
app_name = "O REI"
icon_texture = ExtResource("8_egac1")

[node name="VídeoPlayer" parent="Desktop_Root/Desktop_Icons" unique_id=184865588 instance=ExtResource("6_rrfp6")]
layout_mode = 2
app_scene = ExtResource("11_0syfu")
app_name = "VideoPlayer"
icon_texture = ExtResource("11_g0i7v")

[node name="AudioPlayer" parent="Desktop_Root/Desktop_Icons" unique_id=1380005108 instance=ExtResource("6_rrfp6")]
layout_mode = 2
app_scene = ExtResource("10_q7ic0")
app_name = "AudioPlayer"
icon_texture = ExtResource("11_g0i7v")

[node name="WindowLayer" type="Control" parent="Desktop_Root" unique_id=1472503017]
z_index = 1
anchors_preset = 0
offset_top = 6.0
offset_bottom = 6.0
mouse_filter = 1

[node name="Login" type="Control" parent="." unique_id=1312628652]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_m7g4r")

[node name="LoginScreen" type="Control" parent="Login" unique_id=150900685]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Login_BG" type="TextureRect" parent="Login/LoginScreen" unique_id=364165408]
custom_minimum_size = Vector2(1600, 1200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1560.0
offset_bottom = 1160.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0)
texture = ExtResource("8_j70bi")

[node name="UserImage" type="TextureRect" parent="Login/LoginScreen" unique_id=1719773582]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 516.0
offset_top = 489.83902
offset_right = 644.0
offset_bottom = 617.839
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
texture = ExtResource("8_qu3oj")

[node name="Username" type="Label" parent="Login/LoginScreen" unique_id=1833596242]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 675.00006
offset_top = 473.83902
offset_right = 915.0
offset_bottom = 534.839
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.002092, 0.99472225)
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 44
text = "Monique"
horizontal_alignment = 1

[node name="Password" type="LineEdit" parent="Login/LoginScreen" unique_id=1802271249]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 682.0
offset_top = 561.77795
offset_right = 902.0
offset_bottom = 615.77795
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1, 1.1)
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.19186595, 0.19186652, 0.19186616, 1)
theme_override_colors/font_selected_color = Color(0.30271387, 0.30271387, 0.30271384, 1)
theme_override_colors/font_placeholder_color = Color(0.30660027, 0.30660084, 0.30660042, 0.6)
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = ExtResource("15_77gr0")
placeholder_text = "..."

[node name="Confirm" type="Button" parent="Login/LoginScreen" unique_id=1218315170]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 931.0
offset_top = 545.839
offset_right = 1011.0
offset_bottom = 625.839
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
icon = ExtResource("15_q7ic0")
flat = true

[node name="ErrorLabel" type="Label" parent="Login/LoginScreen" unique_id=2118783386]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 742.00006
offset_top = 633.839
offset_right = 842.00006
offset_bottom = 664.839
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 22
horizontal_alignment = 1

[node name="ForgotPassword" type="Button" parent="Login/LoginScreen" unique_id=109280586]
layout_mode = 0
offset_left = 1040.0
offset_top = 590.839
offset_right = 1090.0
offset_bottom = 640.839
scale = Vector2(1.1, 1.1)
tooltip_text = "Esqueci a minha Senha."
icon = ExtResource("16_g0i7v")
flat = true

[node name="RecoveryScreen" type="Control" parent="Login" unique_id=2013830963]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Login_BG2" type="TextureRect" parent="Login/RecoveryScreen" unique_id=14258450]
custom_minimum_size = Vector2(1600, 1200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1560.0
offset_bottom = 1160.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0)
texture = ExtResource("8_j70bi")

[node name="QuestionLabel" type="Label" parent="Login/RecoveryScreen" unique_id=359156779]
layout_mode = 0
offset_left = 604.0
offset_top = 427.0
offset_right = 1004.0
offset_bottom = 480.0
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 33
horizontal_alignment = 1

[node name="AnswerLine" type="LineEdit" parent="Login/RecoveryScreen" unique_id=724218876]
layout_mode = 0
offset_left = 650.0
offset_top = 600.0
offset_right = 950.0
offset_bottom = 652.0
pivot_offset_ratio = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = ExtResource("15_77gr0")

[node name="ErrorLabel" type="Label" parent="Login/RecoveryScreen" unique_id=1992213391]
layout_mode = 0
offset_left = 740.0
offset_top = 666.0
offset_right = 840.0
offset_bottom = 689.0
scale = Vector2(1.5, 1.5)
pivot_offset_ratio = Vector2(0.5, 0.5)

[node name="BackButton" type="Button" parent="Login/RecoveryScreen" unique_id=1053555446]
layout_mode = 0
offset_left = 567.0
offset_top = 599.0
offset_right = 619.0
offset_bottom = 653.0
icon = ExtResource("17_g0i7v")
flat = true
expand_icon = true

[node name="ConfirmRecovery" type="Button" parent="Login/RecoveryScreen" unique_id=526202330]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 946.0
offset_top = 566.0
offset_right = 1026.0
offset_bottom = 646.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("15_q7ic0")
flat = true

[node name="Mouse" type="Sprite2D" parent="." unique_id=200985795]
top_level = true
z_index = 100
scale = Vector2(0.4, 0.4)
texture = ExtResource("2_2c1gn")
centered = false

[connection signal="pressed" from="Login/LoginScreen/Confirm" to="Login" method="_on_confirm_pressed"]
